// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should build list query 1`] = `
select
    count(*)
from
    media_view
where
    media_view.language = 'en'

`;

exports[`should build node query 1`] = `
select
    media_view.id,
    media_view.description,
    media_view.copyright,
    media_view.kind,
    media_view.url,
    media_view.resolution,
    media_view.created_at,
    media_view.updated_at
from
    media_view
where
    media_view.language = 'en'
order by
    media_view.weight asc

`;
